# ndimensionalspectra

./: Dockerfile  Dockerfile.api  Dockerfile.nginx  Dockerfile.ui  Makefile  README.md  docker-bake.hcl  docker-compose.yml  pyproject.toml
nginx/: nginx.conf
src/ndimensionalspectra/: __init__.py  __main__.py  db.py  models.py  nicegui_app.py  ontogenic_api.py  ontogenic_cli.py  ontogenic_machine.py  ontogenic_schema.py
